Fix bug 1037994: scopes table text overflows at small resolutions

--- a/console/app/assets/stylesheets/console/_tables.scss
+++ b/console/app/assets/stylesheets/console/_tables.scss
@@ -152,6 +152,10 @@ table {
 .table-fixed {
   table-layout: fixed;
 }
+.table-fixed td, .table-fixed th {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 
 // TABLE CELL SIZING
